<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_nav_menu_home"/>

    <item
        android:id="@+id/home_nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/home_nav_search_posts"/>

    <item
        android:id="@+id/home_nav_new"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/home_nav_new_post"/>

    <item
        android:id="@+id/home_nav_services"
        android:icon="@drawable/ic_baseline_home_repair_service_24"
        android:title="@string/home_nav_services"/>

    <item
        android:id="@+id/home_nav_vendors"
        android:icon="@drawable/ic_baseline_local_grocery_store_24"
        android:title="@string/home_nav_vendors"/>
</menu>