<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_actions_my_profile_button"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/home_actions_my_profile"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/home_actions_notifications_button"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/home_actions_recent_activity"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/home_actions_apply_as_handyman"
        android:title="@string/home_actions_apply_as_handyman_button"
        app:showAsAction="never"/>

    <item android:id="@+id/home_actions_log_out"
        android:title="@string/home_actions_log_out_button"
        app:showAsAction="never"/>
</menu>