<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_topic_activity_title"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_topic_activity_likes"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:background="@color/design_default_color_primary"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/view_topic_activity_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_on_secondary"/>

        <TextView
            android:id="@+id/view_help_topic_attached_images_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/activity_view_help_topic_attached_images_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_topic_activity_topic_images_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:scrollbars="horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/view_help_topic_activity_add_solution_text_input_label"
            android:paddingBottom="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/view_help_topic_activity_add_solution_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_on_secondary"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/view_help_topic_activity_add_solution_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_help_topic_activity_post_solution_button"
            app:icon="@drawable/ic_baseline_add_24"
            app:strokeColor="@color/design_default_color_primary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/view_help_topic_activity_solutions_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_help_topic_activity_solutions_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
